--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -37,18 +37,16 @@ body {
   }
   
   button {
-    width: 20%;
-    padding: 2px;
+    width: 100%;
+    padding: 8px;
     border: none;
-    border-radius: 2px;
-    background-color: #ff0000;
+    border-radius: 3px;
+    background-color: #007bff;
     color: white;
     cursor: pointer;
   }
   
   button:hover {
-    background-color: #b30000;
+    background-color: #0056b3;
   }
-  
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+   */
